# ondaire

./: .dockerignore  .gitignore  .gitlab-ci.yml  .mcp.json  IMPLEMENTATION.md  Makefile  QUICKSTART.md  README.md  RELEASING.md  config.example.yaml  go.mod  go.sum  tools.go  verdict.md
branding/: README.md  extract_e.py  generate.sh  wordmark.py
design/: .env.example  DESIGN.md  docker-compose.yml  start.sh  stop.sh
doc/: 01-architecture-and-packages.md  02-cluster-discovery-membership.md  03-adoption-takeover-security-pki.md  04-clock-and-groups.md  05-audio-streaming-protocol.md  06-audio-output-scheduling.md  07-config-and-replication.md  08-http-api-reference.md  09-ui-screens.md  10-roadmap-and-dumb-nodes.md  11-build-ci-and-release.md  A-appendix-algorithms-and-pinned-choices.md  README.md
docker/: Dockerfile  docker-compose.4rooms.yml  docker-compose.yml
docs/: DUMB-CLIENT.md  PLAYER.md  README.md  calibrate.md  calibration.md  esp32.md
esp32/: .gitignore  CMakeLists.txt  README.md  build.sh  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esp32s3-amped  (+9 more)
esp32/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  clock.c  clock.h  config.c  config.h  console.c  console.h  control.c  control.h  encoder.c  encoder.h  i2s_out.c  i2s_out.h  idf_component.yml  ma12070p.c  ma12070p.h  mdns_adv.c  mdns_adv.h  net_audio.c  net_audio.h  netif.c  netif.h  opus_dec.c  opus_dec.h  pcm5122.c  pcm5122.h  player.c  player.h  provision.c  provision.h  servo.c  servo.h  status.c  status.h  tas58xx.c  tas58xx.h  volume.c  volume.h  (+2 more)
(+890 files in other folders)
